add layers comp

--- a/labs/lab_3/lab3_wgan_wgangp.ipynb
+++ b/labs/lab_3/lab3_wgan_wgangp.ipynb
@@ -29,6 +29,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Можете рассмотреть различные составные слои генератора. Как генерируются изображения с ConvTranspose2d? А если заменить его на UpsamplingNearest2d?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Полезные замечания\n",
     "0. Используйте платформу kaggle. Для каждого аккаунта там есть бесплатно в неделю 30 гпу часов.\n",
     "1. Бывает очень полезно посмотреть, как именно изменяется тензор при проходе через генератор. Для этого есть keras-подобный вывод через библиотеку torchsummary.\n",
