--- a/seminars/seminar_4/seminar_4_transformer.ipynb
+++ b/seminars/seminar_4/seminar_4_transformer.ipynb
@@ -2214,7 +2214,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "itmo_dl",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
