--- a/labs/lab_5/lab5_llm_qa_lora.ipynb
+++ b/labs/lab_5/lab5_llm_qa_lora.ipynb
@@ -12,7 +12,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "В рамках этой лабораторной работы вам предстоит дообучить LLM на [датасете Stanford Question Answering Dataset (SQuAD)](https://www.kaggle.com/datasets/stanfordu/stanford-question-answering-dataset/data) с использованием LoRA.\n",
+    "В рамках этой лабораторной работы вам предстоит дообучить LLM на [датасете Stanford Question Answering Dataset (SQuAD)](https://www.kaggle.com/datasets/stanfordu/stanford-question-answering-dataset/data) для задачи question answering с использованием LoRA.\n",
+    "\n",
+    "Задачу можно решить двумя способами: использовать AutoModelForQuestionAnswering или составить пары \"контекст + вопрос\" - \"ответ\" и дообучить AutoModelForCausalLM.\n",
     "\n",
     "Загрузите модель `distilgpt2` или другую. Используйте библиотеку transformers для реализации дообучения.\n",
     "\n",
