--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -82,26 +82,26 @@
    "outputs": [],
    "source": [
     "class SelfAttention(nn.Module):\n",
-    "    def __init__(self, channels, size):\n",
+    "    def __init__(self, channels):\n",
     "        super(SelfAttention, self).__init__()\n",
     "        self.channels = channels\n",
-    "        self.size = size\n",
     "        self.mha = nn.MultiheadAttention(channels, 4, batch_first=True)\n",
-    "        self.ln = nn.LayerNorm([channels])\n",
+    "        self.ln = nn.LayerNorm(channels)\n",
     "        self.ff_self = nn.Sequential(\n",
-    "            nn.LayerNorm([channels]),\n",
+    "            nn.LayerNorm(channels),\n",
     "            nn.Linear(channels, channels),\n",
     "            nn.GELU(),\n",
     "            nn.Linear(channels, channels),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.view(-1, self.channels, self.size * self.size).swapaxes(1, 2)\n",
+    "        B, C, H, W = x.shape\n",
+    "        x = x.view(B, C, H * W).permute(0, 2, 1)  # (B, H*W, C)\n",
     "        x_ln = self.ln(x)\n",
     "        attention_value, _ = self.mha(x_ln, x_ln, x_ln)\n",
     "        attention_value = attention_value + x\n",
     "        attention_value = self.ff_self(attention_value) + attention_value\n",
-    "        return attention_value.swapaxes(2, 1).view(-1, self.channels, self.size, self.size)\n",
+    "        return attention_value.permute(0, 2, 1).view(B, C, H, W)\n",
     "\n",
     "\n",
     "class DoubleConv(nn.Module):\n",
@@ -175,28 +175,30 @@
     "\n",
     "\n",
     "class UNet(nn.Module):\n",
-    "    def __init__(self, c_in=3, c_out=3, time_dim=256, device=\"cuda\"):\n",
+    "    def __init__(self, device, c_in=3, c_out=3, time_dim=256):\n",
     "        super().__init__()\n",
     "        self.device = device\n",
     "        self.time_dim = time_dim\n",
+    "        \n",
     "        self.inc = DoubleConv(c_in, 64)\n",
     "        self.down1 = Down(64, 128)\n",
-    "        self.sa1 = SelfAttention(128, 32)\n",
+    "\n",
+    "        self.sa1 = SelfAttention(128)\n",
     "        self.down2 = Down(128, 256)\n",
-    "        self.sa2 = SelfAttention(256, 16)\n",
+    "        self.sa2 = SelfAttention(256)\n",
     "        self.down3 = Down(256, 256)\n",
-    "        self.sa3 = SelfAttention(256, 8)\n",
+    "        self.sa3 = SelfAttention(256)\n",
     "\n",
     "        self.bot1 = DoubleConv(256, 512)\n",
     "        self.bot2 = DoubleConv(512, 512)\n",
     "        self.bot3 = DoubleConv(512, 256)\n",
     "\n",
     "        self.up1 = Up(512, 128)\n",
-    "        self.sa4 = SelfAttention(128, 16)\n",
+    "        self.sa4 = SelfAttention(128)\n",
     "        self.up2 = Up(256, 64)\n",
-    "        self.sa5 = SelfAttention(64, 32)\n",
+    "        self.sa5 = SelfAttention(64)\n",
     "        self.up3 = Up(128, 64)\n",
-    "        self.sa6 = SelfAttention(64, 64)\n",
+    "        self.sa6 = SelfAttention(64)\n",
     "        self.outc = nn.Conv2d(64, c_out, kernel_size=1)\n",
     "\n",
     "    def pos_encoding(self, t, channels):\n",
@@ -232,7 +234,7 @@
     "        x = self.up3(x, x1, t)\n",
     "        x = self.sa6(x)\n",
     "        output = self.outc(x)\n",
-    "        return output\n"
+    "        return output"
    ]
   },
   {
@@ -303,9 +305,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = UNet()\n",
+    "model = UNet(device=\"mps\")\n",
     "diffusion = Diffusion()\n",
-    "ckpt_path = ..."
+    "ckpt_path = './ckpt.pt'"
    ]
   },
   {
@@ -325,9 +327,15 @@
    "source": [
     "diffusion.sample(\n",
     "    model,\n",
-    "    # ...\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +345,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
