--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -20,9 +20,15 @@
    "source": [
     "$$\n",
     "x_{t-1} = \\sqrt{\\alpha_{t-1}} \\left( \\frac{x_t - \\sqrt{1 - \\alpha_t} \\epsilon_{\\theta}^{(t)}(x_t)}{\\sqrt{\\alpha_t}} \\right)\n",
-    "+ \\sqrt{1 - \\alpha_{t-1} - \\sigma_t^2} \\cdot \\epsilon_{\\theta}^{(t)}(x_t)\n",
-    "+ \\sigma_t \\epsilon_t\n",
+    "+ \\sqrt{1 - \\alpha_{t-1} } \\cdot \\epsilon_{\\theta}^{(t)}(x_t)\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Важное замечание*. $\\alpha$ в формуле соответствует alpha_hat из семинара."
    ]
   },
   {
