lab6 task fix 2

--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "$$\n",
     "x_{t-1} = \\sqrt{\\alpha_{t-1}} \\left( \\frac{x_t - \\sqrt{1 - \\alpha_t} \\epsilon_{\\theta}^{(t)}(x_t)}{\\sqrt{\\alpha_t}} \\right)\n",
-    "+ \\sqrt{1 - \\alpha_{t-1} } \\cdot \\epsilon_{\\theta}^{(t)}(x_t)\n",
+    "+ \\sqrt{1 - \\alpha_{t-1} - \\sigma_t ^2} \\cdot \\epsilon_{\\theta}^{(t)}(x_t)\n",
+    "+ \\sigma_t * \\epsilon\n",
     "$$\n"
    ]
   },
@@ -28,7 +29,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Важное замечание*. $\\alpha$ в формуле соответствует alpha_hat из семинара."
+    "**Важные замечания**.\n",
+    "\n",
+    "1) $\\alpha$ в формуле соответствует alpha_hat из семинара.\n",
+    "2) Обратите внимание, что надо брать t с некоторым шагом. Например, [1, 10, 20, ...]. Модель была обучена на 1000 шагах, соответственно среди последовательности [1, ..., 1000] и надо выбирать шаги.\n",
+    "3) Примите $\\sigma_t$ = 0, тогда процесс будет детерминирован. Как влияет $\\sigma_t$ на генерацию?"
    ]
   },
   {
