--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "**Важные замечания**.\n",
     "\n",
-    "1) $\\alpha$ в формуле соответствует $\\alpha_{hat}$ = `torch.sumprod(alphas)` из семинара.\n",
+    "1) $\\alpha$ в формуле соответствует $\\alpha_{hat}$ = `torch.cumprod(alphas)` из семинара.\n",
     "2) Обратите внимание, что надо брать t с некоторым шагом. Например, [1, 10, 20, ...]. Модель была обучена на 1000 шагах, соответственно среди последовательности [1, ..., 1000] и надо выбирать шаги.\n",
     "3) Примите $\\sigma_t$ = 0, тогда процесс будет детерминирован. Как влияет $\\sigma_t$ на генерацию?"
    ]
