lab6 task fix 4

--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -291,7 +291,7 @@
     "        # инициализируем шаги зашумления как случайный вектор\n",
     "        return torch.randint(low=1, high=self.noise_steps, size=(n,))\n",
     "\n",
-    "    def sample(self, model, n):\n",
+    "    def sample(self, model, n, step):\n",
     "        # put your code here\n",
     "        pass"
    ]
