--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -32,7 +32,7 @@
     "**Важные замечания**.\n",
     "\n",
     "1) $\\alpha$ в формуле соответствует $\\alpha_{hat}$ = `torch.cumprod(alphas)` из семинара.\n",
-    "2) Обратите внимание, что надо брать t с некоторым шагом. Например, [1, 10, 20, ...]. Модель была обучена на 1000 шагах, соответственно среди последовательности [1, ..., 1000] и надо выбирать шаги.\n",
+    "2) Обратите внимание, что надо брать значения t как подпоследовательность массива [1, ..., noise_steps]. Например, определить параметр `step` для фунции `sample`, и выбрать подпоследовательность [1, step, 2*step, ...].\n",
     "3) Примите $\\sigma_t$ = 0, тогда процесс будет детерминирован. Как влияет $\\sigma_t$ на генерацию?"
    ]
   },
