--- a/labs/lab_6/lab_6_ddim.ipynb
+++ b/labs/lab_6/lab_6_ddim.ipynb
@@ -33,7 +33,8 @@
     "\n",
     "1) $\\alpha$ в формуле соответствует $\\alpha_{hat}$ = `torch.cumprod(alphas)` из семинара.\n",
     "2) Обратите внимание, что надо брать значения t как подпоследовательность массива [1, ..., noise_steps]. Например, определить параметр `step` для фунции `sample`, и выбрать подпоследовательность [1, step, 2*step, ...].\n",
-    "3) Примите $\\sigma_t$ = 0, тогда процесс будет детерминирован. Как влияет $\\sigma_t$ на генерацию?"
+    "3) Примите $\\sigma_t$ = 0, тогда процесс будет детерминирован. Как влияет $\\sigma_t$ на генерацию?\n",
+    "4) Обратите внимание, что для в формуле t - 1 обозначает предыдущий шаг в выбранной подпоследовательности."
    ]
   },
   {
